--- a/data/st2.conf
+++ b/data/st2.conf
@@ -8,6 +8,7 @@ mask_secrets = True
 logging = /etc/st2/logging.api.conf
 # allow_origin is required for handling CORS in st2 web UI.
 # allow_origin = http://myhost1.example.com:3000,http://myhost2.example.com:3000
+allow_origin = http://localhost:3000
 
 [sensorcontainer]
 logging = /etc/st2/logging.sensorcontainer.conf
